# mobile-robotics-basics

./: .gitignore  README.md
lesson 1 (install ROS2 and testing)/: README.md  ros2_doctor.md  ros2_environment.md  ros2_humble_install.md  ros2_jazzy_install.md  ros2_rqt.md  ros2_testing.md  ros2_turtlesim.md  rqt_console.md  windows_wsl2_jazzy_install.md
lesson 10 (turtlebot3 sim)/: README.md  install_jazzy_turtlebot3.md  turtlebot3_intro.md
lesson 11 (micro-ros)/: README.md
lesson 2 (nodes and topics)/: README.md  ros2_bag.md  rosdep.md  understanding_nodes.md  understanding_topics.md  workspace_colcon_package.md  writing_listener.md  writing_talker.md
lesson 3 (actions and services)/: README.md  understanding_actions.md  understanding_services.md  writing_action.md  writing_fibonacci_action.md  writing_service.md
lesson 4 (launches and parameters)/: README.md  understanding_launches.md  understanding_parameters.md  writing_launches.md
lesson 5 (URDF and XACRO)/: README.md  exporting_URDF.md  movable_robot.md  phisical_and_collisions.md  physical_and_collisions.md  understanding_URDF.md  understanding_xacro.md  writing_state_publisher.md
lesson 6 (RViz2 and rqt)/: README.md  RViz_introduction.md
lesson 7 (TF2)/: README.md  adding_tf_frame.md  dynamic_tf_broadcaster.md  introducing_tf2.md  static_tf_broadcaster.md  writing_tf_listener.md
lesson 8 (Gazebo)/: README.md
lesson 9 (NAV2)/: README.md
lesson_1/: ros2_humble_install.md  ros2_jazzy_install.md  ros2_rqt.md  ros2_testing.md  ros2_turtlesim  ros2_turtlesim.md
lesson_2/: understanding_nodes.md  understendibg topics.md  writing_talker.md
lesson_3/: writing_action.md  writing_servise.md
ros2_ws/src/: README.md
ros2_ws/src/custom_action_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/fibonacci_action_py/: package.xml  setup.py
ros2_ws/src/fibonacci_action_py/fibonacci_action_py/: fibonacci_action_client.py  fibonacci_action_server.py
ros2_ws/src/turtle_action/: CMakeLists.txt  package.xml
ros2_ws/src/turtle_action/action/: MoveTo.action
ros2_ws/src/turtle_action/scripts/: action_client.py  action_server.py
ros2_ws/src/urdf_tutorial_r2d2/: package.xml  setup.py
ros2_ws/src/urdf_tutorial_r2d2/launch/: demo_launch.py
ros2_ws/src/urdf_tutorial_r2d2/rviz/: r2d2.rviz
ros2_ws/src/urdf_tutorial_r2d2/urdf/: r2d2.urdf.xml
ros2_ws/src/urdf_tutorial_r2d2/urdf_tutorial_r2d2/: state_publisher.py
(+42 files in other folders)
